feat: Add user search endpoint
